--- a/views/game.ejs
+++ b/views/game.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-
+<!--
+1. Dynamic Villan Dropdown
+2. Dynamic Waiting Picture for villain Choice
+3. Send choice to server
+-->
 <head>
   <title>P,R,S - Game</title>
   <link rel="stylesheet" href="styles/style.css">
@@ -18,10 +22,10 @@
       Enter your choice of weapon:<br>
       <select name="weapon">
         <option value=" "> </option>
-        <option value="paper">Paper</option>
-        <option value="rock">Rock</option>
-        <option value="scissors">Scissors</option>
-      </select><br>
+        <option value="Paper">Paper</option>
+        <option value="Rock">Rock</option>
+        <option value="Scissors">Scissors</option>
+      </select>
       <button type="submit" id="throw_choice_button">Throw Choice</button>
     </form>
   </div>
