results and server additions

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: mistyrose;
   color: black;
 
 }
@@ -13,7 +13,7 @@ h1:visited {
 }
 
 a {
-  color: red;
+  color: PaleVioletRed;
 }
 
 div {
