--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,6 +12,25 @@
     <h2>About Paper, Rock, Scissors: Showdown</h2>
     This app is meant to demonstrate the basic concepts necessary to run an Express server.
     <br>
+    <h3>Rules</h3>
+    <p>Welcome to PRS: Showdown! To start, first login using your username and password credentials. From there, you will directed to the game page:
+      <ol>
+        <li>Select a villain from the drop down menu</li>
+        <li>Select your weapon of choice from the drop down menu</li>
+        <li>Press the submit button</li>
+      </ol>
+    After submitting your villain and weapon, you will be directed to the results page, which will decide a winner based on these rules:
+    <ol>
+      <li><b>Scissors</b> beats <b>Paper</b>, but loses to <b>Rock</b></li>
+      <li><b>Rock</b> beats <b>Scissors</b>, but loses to <b>Paper</b></li>
+      <li><b>Paper</b> beats <b>Rock</b>, but loses to <b>Scissors</b></li>
+    </ol>
+    In this game, a fist indicates Rock, an open hand indicates Paper, and a peace sign indicates Scissors.
+    <br>
+    As you play, your stats will be updated on the Stats page, where you can view your ranking against other users and villains. These leaderboards will be ranked by the percentage of wins, not the total number.
+    </p>
+    <a href="https://www.wrpsa.com/">The Official World Rock, Paper, Scissors, Organization</a>
+    <br>
     <br>
     All villain images downloaded with permission from <a href="https://thenounproject.com/">the Noun Project.</a>
     <h2>Image Credits: </h2>
