--- a/views/game.ejs
+++ b/views/game.ejs
@@ -14,6 +14,7 @@
   <% include global/header %>
 
   <div id="feedback">
+
   </div>
   <div id="throw_choice">
     <h2>Play the Game</h2>
@@ -26,8 +27,24 @@
         <option value="Rock">Rock</option>
         <option value="Scissors">Scissors</option>
       </select>
-      <button type="submit" id="throw_choice_button">Throw Choice</button>
+
+      Enter your choice of Villian:<br>
+      <select name="villain_name">
+        <option value=" "></option>
+        <% for (i=0; i < data.villains.length; i++) { %>
+          <option value="<%=data.villains[i].name%>">
+            <%= data.villains[i].name %>
+          </option>
+        <% } %>
+      </select>
+
+      <button type="submit">Shoot!</button>
+
     </form>
+
+
+
+
   </div>
   <footer>
     Brought to you by the cool kids of Software Engineering - Fall, 2018.
