--- a/views/about.ejs
+++ b/views/about.ejs
@@ -27,7 +27,7 @@
     </ol>
     In this game, a fist indicates Rock, an open hand indicates Paper, and a peace sign indicates Scissors.
     <br>
-    As you play, your stats will be updated on the Stats page, where you can view your ranking against other users and villains. These leaderboards will be ranked by the percentage of wins, not the total number.
+    As you play, your stats will be updated on the Stats page, where you can view your ranking against other users and villains. These leaderboards will be ranked by the percentage of wins, not the total number. Each villain has their own unique strategy, so pay attention to their most frequent throws!
     </p>
     <a href="https://www.wrpsa.com/">The Official World Rock, Paper, Scissors, Organization</a>
     <br>
