--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,6 +1,8 @@
 body {
   background-color: mistyrose;
   color: black;
+  font-family: arial;
+  letter-spacing: 0.5px;
 
 }
 h1 {
@@ -23,7 +25,8 @@ div {
   margin-left: 50px;
   background-color: #ffffff;
   background-color: white;
-  padding: 10px;
+  padding: 15px;
+  border-radius: 5px;
 }
 
 table, th, td {
