--- a/views/results.ejs
+++ b/views/results.ejs
@@ -8,7 +8,7 @@
     <% include global/header %>
 
   <div id="results">
-    <h2> <%= user.name %> vs. Villain Results</h2>
+    <h2> <%= user.name %> vs. <%= villain.name %> Results</h2>
     <p>You have chosen: <%= user.weapon %></p>
     <p>You have played against: <%= villain.name %></p>
   </div>
