--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -34,6 +34,11 @@ table, th, td {
    outline: red solid 2px;
 }
 
+img {
+  width: 100px;
+  border: 5px solid PaleVioletRed;
+}
+
 .top_row{
   background-color: #000000;
   color: white;
