--- a/views/results.ejs
+++ b/views/results.ejs
@@ -14,7 +14,7 @@
     <p><%= villain.name %> chose: <%= villain.weapon %></p>
     <p><%= villain.name %> now has <%= villain.wins %> wins and <%= villain.losses %> losses</p>
     <p><%= user.name %> now has <%= user.wins %> wins and <%= user.losses %> losses
-
+      <p><%= user.game %></p>
       <table>
         <tr>
           <th>Name</th>
