--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
 
   <div id="feedback">
   </div>
-  
+
   <div id="enter_name">
     <h2>Welcome to Paper, Rock, Scissors</h2>
     <form action="/game" method="get">
@@ -22,9 +22,8 @@
       <button type="submit" id="enter_name_button">Submit Name</button>
     </form>
   </div>
-  <footer>
-    Brought to you by the cool kids of Software Engineering - Fall, 2018.
-  </footer>
+  <% include global/footer %>
+
   <script src="scripts/scripts.js"></script>
 </body>
 
