--- a/views/results.ejs
+++ b/views/results.ejs
@@ -40,9 +40,8 @@
 
 
 
-  <footer>
-    Brought to you by the cool kids of Software Engineering - Fall, 2018.
-  </footer>
+  <% include global/footer %>
+
   <script src="../scripts/scripts.js"></script>
   </body>
 </html>
