--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -55,9 +55,8 @@
   </div>
 
 
-  <footer>
-    Brought to you by the cool kids of Software Engineering - Fall, 2018.
-  </footer>
+  <% include global/footer %>
+
   <script src="scripts/scripts.js"></script>
  </body>
 </html>
